# json5kit

./: .gitignore  README.md  SPEC.md  setup.cfg
src/json5_rt/: __init__.py  nodes.py
src/json5kit/: __init__.py  nodes.py
tests/: json5_rt_test.py  json5kit_test.py
