[metadata]
name = json5kit
version = 0.3.1
description = A Roundtrip parser and CST for JSON, JSONC and JSON5.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/json5kit
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.extras_require]
dev =
    black
    mypy
    pytest-cov
    typing_extensions; python_version < "3.8"

[tool:pytest]
addopts = --cov --cov-report=term-missing

[coverage:report]
exclude_lines =
    \#\s*pragma: no cover\b
    ^if __name__ == ['"]__main__['"]:
    ^if TYPE_CHECKING:
    raise NotImplementedError
    \.\.\.
